[metadata]
name = tf-siammask
version = attr: siammask.VERSION
description = SiamMask implementation by Tensorflow 2
long_description = file: LICENSE
keywords = yolov4, tensorflow
license = MIT
classifiers =
    Framework :: Tensorflow
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
pythonrequire = >=3.7,4.0>
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pillow
    tensorflow
    numpy

[options.packages.find]
exclude =
    tests
